<resources>
    <string name="app_name">Manager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="desc">desc</string>
    <string name="title">title</string>
    <string name="profile">Profile</string>
    <string name="nickname">Nickname</string>
    <string name="description">Description</string>
    <string name="get_started">Get started</string>
    <string name="skip">Skip</string>
    <string name="fragment_task">fragment_task</string>
    <string name="Profile">Profile</string>
    <string name="fragment_on_boarding">fragment_on_boarding</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_title">Удалить элемент?</string>
    <string name="delete_message">Вы уверены, что хотите удалить выбранный вами элемент?</string>
    <string name="delete_titlle">Удалить элемент?</string>
    <string name="deletemessage">Вы уверены, что хотите удалить выбранный элемент?</string>
    <string name="yess">Нет</string>
    <string name="nope">Да</string>
    <string name="auth_success_mesg">Авторизация прошло успешно</string>
</resources>