<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.manager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.manager.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.manager.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.manager.ui.task.TaskFragment"
        android:label="@string/fragment_task"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.manager.ui.profile.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.example.manager.ui.onboarding.OnBoardingFragment"
        android:label="@string/fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" />

    <fragment
        android:id="@+id/codeFragment"
        android:name="com.example.manager.ui.auth.code.CodeFragment"
        android:label="fragment_code"
        tools:layout="@layout/fragment_code" />

    <fragment
        android:id="@+id/phoneFragment"
        android:name="com.example.manager.ui.auth.phone.PhoneFragment"
        android:label="fragment_phone"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/chooseRegisterFragment"
        android:name="com.example.manager.ui.auth.googleregis.ChooseRegisterFragment"
        android:label="fragment_choose_register"
        tools:layout="@layout/fragment_choose_register" />

</navigation>